higher observable samples

--- a/src/app/rxjs-practice1/rxjs-practice1.component.html
+++ b/src/app/rxjs-practice1/rxjs-practice1.component.html
@@ -1,1 +1,5 @@
 <p>rxjs-practice1 works!</p>
+<button (click)="testMergeMap()">Test mergeMap</button>
+<button (click)="testSwitchMap()">Test switchMap</button>
+<button (click)="testConcatMap()">Test concatMap</button>
+<button (click)="testExhaustMap()">Test exhaustMap</button>
